--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trabook</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main">
+      <header>
+        <div class="logo">
+          <span class="volkhov-bold">Trabook</span>
+          <span><img src="./assets/Vector.png" alt="logo-image"/></span>
+        </div>
+        <div class="nav">
+          <button>Home</button>
+          <button>About</button>
+          <button>Destination</button>
+          <button>Tour</button>
+          <button>Blog</button>
+        </div>
+        <div class="actions">
+          <button class="no-bg-btn">Login</button>
+          <button class="bg-btn">Sign up</button>
+          </div>
+        </div>
+      </header>
+    </div>
+  </body>
+</html>
