reused repetive css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="main">
-      <header>
-        <div class="logo">
+      <header class="flex-box">
+        <div class="logo flex-box">
           <span class="volkhov-bold">Trabook</span>
           <span><img src="./assets/Vector.png" alt="logo-image"/></span>
         </div>
@@ -20,7 +20,7 @@
           <button>Tour</button>
           <button>Blog</button>
         </div>
-        <div class="actions">
+        <div class="actions flex-box">
           <button class="no-bg-btn">Login</button>
           <button class="bg-btn">Sign up</button>
           </div>
